# python-ironicclient

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  CONTRIBUTING.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: api_v1.rst  cli.rst  conf.py  contributing.rst  create_command.rst  index.rst  osc_plugin_cli.rst  testing.rst
doc/source/cli/: index.rst  ironic_client.rst  osc_plugin_cli.rst  standalone.rst
doc/source/contributor/: contributing.rst  index.rst  testing.rst
doc/source/reference/: index.rst
doc/source/user/: create_command.rst
ironicclient/: __init__.py  client.py  exc.py  shell.py
ironicclient/common/: base.py  cliutils.py  filecache.py  http.py  i18n.py  utils.py
ironicclient/common/apiclient/: base.py  exceptions.py
ironicclient/openstack/common/: __init__.py  _i18n.py  cliutils.py  gettextutils.py  importutils.py  strutils.py
ironicclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
ironicclient/openstack/common/config/: generator.py
ironicclient/openstack/common/rootwrap/: cmd.py  wrapper.py
ironicclient/osc/: client.py  command.py  plugin.py
ironicclient/osc/v1/: baremetal.py  baremetal_allocation.py  baremetal_chassis.py  baremetal_conductor.py  baremetal_create.py  baremetal_deploy_template.py  baremetal_driver.py  baremetal_inspection_rule.py  baremetal_node.py  baremetal_port.py  baremetal_portgroup.py  baremetal_runbook.py  baremetal_shard.py  baremetal_volume_connector.py  baremetal_volume_target.py
ironicclient/tests/: test_client.py  test_http.py  test_import.py  test_shell.py  test_utils.py  utils.py
ironicclient/tests/functional/: base.py  test_chassis.py  test_chassis_create.py  test_driver.py  test_help_msg.py  test_ironicclient.py  test_json_response.py  test_node.py  test_node_set_power_state.py  test_port.py  test_portgroup.py  test_table_structure.py  utils.py
ironicclient/tests/functional/hooks/: post_test_hook.sh
ironicclient/tests/unit/: test_client.py  test_cliutils.py  test_exc.py  test_filecache.py  test_http.py  test_import.py  test_shell.py  test_utils.py  utils.py
ironicclient/tests/unit/apiclient/: test_exceptions.py
ironicclient/tests/unit/common/: test_base.py  test_cliutils.py  test_filecache.py  test_http.py  test_utils.py
ironicclient/tests/unit/osc/: fakes.py  test_plugin.py
ironicclient/tests/unit/v1/: test_allocation.py  test_chassis.py  test_chassis_shell.py  test_client.py  test_conductor.py  test_create_resources.py  test_create_resources_shell.py  test_deploy_template.py  test_driver.py  test_driver_shell.py  test_events.py  test_node.py  test_node_shell.py  test_port.py  test_port_shell.py  test_portgroup.py  test_portgroup_shell.py  test_resource_fields.py  test_runbook.py  test_shard.py  test_volume_connector.py  test_volume_connector_shell.py  test_volume_target.py  test_volume_target_shell.py
ironicclient/tests/v1/: test_chassis.py  test_chassis_shell.py  test_driver.py  test_driver_shell.py  test_node.py  test_node_shell.py  test_port.py  test_port_shell.py
ironicclient/v1/: __init__.py  allocation.py  chassis.py  chassis_shell.py  client.py  conductor.py  create_resources.py  create_resources_shell.py  deploy_template.py  driver.py  driver_shell.py  events.py  inspection_rule.py  node.py  node_shell.py  port.py  port_shell.py  portgroup.py  portgroup_shell.py  resource_fields.py  runbook.py  shard.py  shell.py  utils.py  volume_connector.py  volume_connector_shell.py  volume_target.py  volume_target_shell.py
playbooks/functional/: run.yaml
playbooks/legacy/ironicclient-dsvm-functional/: run.yaml
playbooks/legacy/ironicclient-tempest-dsvm-src/: run.yaml
releasenotes/notes/: SHA1-hash-auth-token-f8dce46f854c002c.yaml  accept-valid_interfaces-3b8f5e3e362e04cd.yaml  add-allocation-owner-0c6daad4ebfea5e6.yaml  add-bios-registry-in-list-21974873f146aff7.yaml  add-chassis_uuid-removal-possibility-5bc0bc3a7953eaa5.yaml  add-conductor-cli-233249ebc9d5a5f3.yaml  add-create-command-3df5efbbecc33276.yaml  add-deploy-steps-arg-0b127e29c8cf976d.yaml  add-driver-cli-fields-selector-b0f527eb5f6fb2a9.yaml  add-environment-variable-to-specify-version-cache-timeout-dfa5f6d4af0ea1d3.yaml  add-events-support-53c461d28abf010b.yaml  add-hostname-to-port-local-link-connection-0d4ae64b0c24bf52.yaml  add-is-smartnic-port-attr-ed46d887aec276ed.yaml  add-json-option-0cf29be2a97e0212.yaml  add-network-data-node-attr-81dec9cecb7491b9.yaml  add-neutron-integration-fields-cee7596c49722de6.yaml  add-no-retired-opt-403bb5e466e4facb.yaml  add-node-boot-mode-08ac768649a2fc93.yaml  add-node-boot-mode-set-9746b45aa3f80fe8.yaml  add-node-description-support-6efd0882eaa0c788.yaml  add-node-health-fields-support-c8f3d2a9b7e4f1a5.yaml  add-node-history-b9b9beeb0200f185.yaml  add-node-inventory-74e856c019cfa7e2.yaml  add-node-lessee-c36409eb0415f75d.yaml  add-node-owner-c2dce5a6075ce2b7.yaml  add-node-resource-class-6040d1d6c734522c.yaml  add-parent-node-support-450b111533c82440.yaml  add-pecan-exc-construction-a776408f7ae110dc.yaml  add-port-internal-info-74a03ebd8b0a3dfc.yaml  add-port-vendor-category-4f046b55eec698bf.yaml  add-portgroup-mode-properties-0a3023cf905adaef.yaml  add-portgroup-physical-network-category-53508695ce5f5dc5.yaml  add-portgroups-support-c3cf3826093ee815.yaml  add-portgroups-to-create-command-6d685277f7af79df.yaml  add-rescue-interface-to-node-and-driver-e3ff9b5df2628e5a.yaml  add-rescue-unrescue-support-f78266514ca59346.yaml  add-service-steps-0c517e64563f6bbe.yaml  add-vif-attach-detach-support-e680d64e4add0fa4.yaml  add-volume-connector-api-873090474d5e41b8.yaml  add-volume-connector-cli-873090474d5e41b8.yaml  (+158 more)
releasenotes/source/: conf.py  index.rst  train.rst
tools/: install_venv_common.py  ironic.bash_completion  run_functional.sh  tox_install.sh
zuul.d/: ironicclient-jobs.yaml  legacy-ironicclient-jobs.yaml  project.yaml
(+34 files in other folders)
