[build-system]
requires = ["pbr>=6.0.0", "setuptools>=64.0.0"]
build-backend = "pbr.build"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Modules that have been fully type-annotated. Add modules here as they are
# migrated to enable strict type checking for them.
files = [
    "ironicclient/common/i18n.py",
    "ironicclient/common/filecache.py",
    "ironicclient/common/apiclient/exceptions.py",
    "ironicclient/common/apiclient/base.py",
    "ironicclient/common/base.py",
    "ironicclient/exc.py",
    "ironicclient/common/utils.py",
    "ironicclient/common/http.py",
    "ironicclient/v1/events.py",
    "ironicclient/v1/shard.py",
    "ironicclient/v1/utils.py",
    "ironicclient/v1/conductor.py",
    "ironicclient/v1/deploy_template.py",
    "ironicclient/v1/inspection_rule.py",
    "ironicclient/v1/runbook.py",
    "ironicclient/v1/volume_connector.py",
    "ironicclient/v1/volume_target.py",
    "ironicclient/v1/client.py",
    "ironicclient/v1/port.py",
    "ironicclient/v1/portgroup.py",
    "ironicclient/v1/driver.py",
    "ironicclient/v1/allocation.py",
    "ironicclient/v1/chassis.py",
    "ironicclient/v1/resource_fields.py",
    "ironicclient/v1/create_resources.py",
    "ironicclient/v1/node.py",
    "ironicclient/client.py",
    "ironicclient/shell.py",
    "ironicclient/__init__.py",
    "ironicclient/osc/plugin.py",
    "ironicclient/osc/v1/baremetal_shard.py",
    "ironicclient/osc/v1/baremetal_create.py",
    "ironicclient/osc/v1/baremetal_conductor.py",
    "ironicclient/osc/v1/baremetal_driver.py",
    "ironicclient/osc/v1/baremetal_chassis.py",
    "ironicclient/osc/v1/baremetal_deploy_template.py",
]