[metadata]
name = python-ironicclient
summary = OpenStack Bare Metal Provisioning API Client Library
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-ironicclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages = ironicclient

[entry_points]
console_scripts =
    ironic = ironicclient.shell:main

openstack.cli.extension =
    baremetal = ironicclient.osc.plugin

openstack.baremetal.v1 =
    baremetal_create = ironicclient.osc.v1.baremetal_create:CreateBaremetal
    baremetal_delete = ironicclient.osc.v1.baremetal_node:DeleteBaremetal
    baremetal_list = ironicclient.osc.v1.baremetal_node:ListBaremetal
    baremetal_node_abort = ironicclient.osc.v1.baremetal_node:AbortBaremetalNode
    baremetal_node_adopt = ironicclient.osc.v1.baremetal_node:AdoptBaremetalNode
    baremetal_node_clean = ironicclient.osc.v1.baremetal_node:CleanBaremetalNode
    baremetal_node_create = ironicclient.osc.v1.baremetal_node:CreateBaremetalNode
    baremetal_node_delete = ironicclient.osc.v1.baremetal_node:DeleteBaremetalNode
    baremetal_node_deploy = ironicclient.osc.v1.baremetal_node:DeployBaremetalNode
    baremetal_node_inspect = ironicclient.osc.v1.baremetal_node:InspectBaremetalNode
    baremetal_node_list = ironicclient.osc.v1.baremetal_node:ListBaremetalNode
    baremetal_node_maintenance_set = ironicclient.osc.v1.baremetal_node:MaintenanceSetBaremetalNode
    baremetal_node_maintenance_unset = ironicclient.osc.v1.baremetal_node:MaintenanceUnsetBaremetalNode
    baremetal_node_manage = ironicclient.osc.v1.baremetal_node:ManageBaremetalNode
    baremetal_node_power = ironicclient.osc.v1.baremetal_node:PowerBaremetalNode
    baremetal_node_provide = ironicclient.osc.v1.baremetal_node:ProvideBaremetalNode
    baremetal_node_reboot = ironicclient.osc.v1.baremetal_node:RebootBaremetalNode
    baremetal_node_rebuild = ironicclient.osc.v1.baremetal_node:RebuildBaremetalNode
    baremetal_node_set = ironicclient.osc.v1.baremetal_node:SetBaremetalNode
    baremetal_node_show = ironicclient.osc.v1.baremetal_node:ShowBaremetalNode
    baremetal_node_undeploy = ironicclient.osc.v1.baremetal_node:UndeployBaremetalNode
    baremetal_node_unset = ironicclient.osc.v1.baremetal_node:UnsetBaremetalNode
    baremetal_port_create = ironicclient.osc.v1.baremetal_port:CreateBaremetalPort
    baremetal_port_show = ironicclient.osc.v1.baremetal_port:ShowBaremetalPort
    baremetal_port_unset = ironicclient.osc.v1.baremetal_port:UnsetBaremetalPort
    baremetal_port_set = ironicclient.osc.v1.baremetal_port:SetBaremetalPort
    baremetal_set = ironicclient.osc.v1.baremetal_node:SetBaremetal
    baremetal_show = ironicclient.osc.v1.baremetal_node:ShowBaremetal
    baremetal_unset = ironicclient.osc.v1.baremetal_node:UnsetBaremetal

[pbr]
autodoc_index_modules = True
autodoc_exclude_modules =
    ironicclient.tests.functional.*
warnerrors = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
